div stacking behind the sticky navbar fixed

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -3,6 +3,7 @@
     height: auto;
     background-color: #f9fbfb;
     font-family: 'Times New Roman', Times, serif;
+    padding-top: 40px;
 }
 
 h1{
