--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -3,6 +3,7 @@
     height: auto;
     font-family: 'Times New Roman', Times, serif;
     background-color: #f9fbfb;
+    padding-top: 40px;
 }
 
 h1{
