--- a/src/app/components/services/services.component.css
+++ b/src/app/components/services/services.component.css
@@ -4,6 +4,7 @@
     background-color: #fff;
     font-family: 'Times New Roman', Times, serif;
     display: block;
+    padding-top: 40px;
 }
 
 h1{
@@ -25,9 +26,9 @@ p{
 }
 
 .row{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px 20px 10px 20px;
+    padding-top: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 img{
@@ -36,9 +37,4 @@ img{
 }
 
 
-.row{
-    margin-top: 40px;
-    margin-bottom: 40px;
-    padding: 10px;
-}
 
